--- a/web/firebase.json
+++ b/web/firebase.json
@@ -4,10 +4,14 @@
   },
   "hosting": {
     "public": "dist",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ]
+//    "ignore": [
+//      "firebase.json",
+//      "**/.*",
+//      "**/node_modules/**"
+//    ]
+    "rewrites": [{
+      "sourse": "**",
+      "function": "helloWorld"
+    }]
   }
 }
