--- a/web/package.json
+++ b/web/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^4.0.0",
     "angularfire2": "^4.0.0-rc.2",
     "core-js": "^2.4.1",
+    "ffmpeg": "0.0.4",
     "firebase": "^4.3.1",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
