--- a/web/functions/package.json
+++ b/web/functions/package.json
@@ -2,6 +2,7 @@
   "name": "functions",
   "description": "Cloud Functions for Firebase",
   "dependencies": {
+    "ffmpeg": "0.0.4",
     "firebase-admin": "~5.2.1",
     "firebase-functions": "^0.6.2"
   },
