--- a/web/firebase.json
+++ b/web/firebase.json
@@ -8,6 +8,10 @@
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
-    ]
+    ],
+    "rewrites": [{
+      "source": "/test",
+      "function": "test"
+    }]
   }
 }
