--- a/web/package.json
+++ b/web/package.json
@@ -21,7 +21,7 @@
     "@angular/platform-browser": "^4.4.6",
     "@angular/platform-browser-dynamic": "^4.4.6",
     "@angular/router": "^4.4.6",
-    "angularfire2": "^5.0.0-rc.0-next",
+    "angularfire2": "^5.0.0-rc.3",
     "core-js": "^2.4.1",
     "firebase": "^4.6.0",
     "firebase-functions": "^0.7.1",
