--- a/web/package.json
+++ b/web/package.json
@@ -24,6 +24,7 @@
     "angularfire2": "^5.0.0-rc.3",
     "core-js": "^2.4.1",
     "firebase": "^4.6.1",
+    "node-sass": "^4.6.0",
     "rxjs": "^5.5.0",
     "zone.js": "^0.8.18"
   },
